--- a/src/Components/Slides/SlideStyle.scss
+++ b/src/Components/Slides/SlideStyle.scss
@@ -2,6 +2,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .text {
@@ -18,11 +19,11 @@
 
 
 .titleDiv hr {
-    position: fixed;
-    width: 22%;
+    position: absolute;
+    width: 15%;
     margin: auto;
     border-width: 3px 0 0;
-    top: 14vh;
+    top: 10vh;
     border-color: rgba(223, 223, 223, 0.25);
   }
   
